--- a/src/characters/pages/Character.css
+++ b/src/characters/pages/Character.css
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
     align-items: flex-end;
     justify-content: center;
-    background-image: url(../../assets/background.jpg);
+    background-image: url(/assets/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
