--- a/src/characters/components/cardCharacter.css
+++ b/src/characters/components/cardCharacter.css
@@ -17,7 +17,28 @@
    margin-top: -150px;
     height: 200px; 
    position: relative;
+   animation: grow 0.5s ease-in-out ;
 }
+
+
+
+
+@keyframes grow {
+    0% {
+        transform: scale(1);
+        opacity: 0%;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 100%;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 100%;
+    }
+}
+
+
 .card-button{
     text-decoration: none;
     background-color: var(--primary);
@@ -30,6 +51,7 @@
 }
 
 .card-button:hover{
-background-color: var(--seconday);
-color: var(--white);
+    background-color: var(--seconday);
+    color: var(--white);
+    animation-play-state: running;
 }
