--- a/src/characters/pages/Character.css
+++ b/src/characters/pages/Character.css
@@ -1,6 +1,7 @@
 .character-img {
     height: 400px;
     margin-bottom: -90px;
+    animation: grow 0.5s ease-in-out ;
 }
 
 .top-container{
@@ -16,10 +17,26 @@
 }
 
 .description-container{
+    z-index: 10;
     background-color: var(--white);
     margin-bottom: -90px;
    
     padding: 25px;
     border-radius: 50px;
     max-width: 500px;
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(1);
+        opacity: 0%;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 100%;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 100%;
+    }
 }
