new feature home

--- a/src/BlueyApp.css
+++ b/src/BlueyApp.css
@@ -3,3 +3,21 @@
   src: local("AirbnbCerealLight"),
     url("./fonts/hello.ttf") format("truetype");
 }
+
+.logo {
+  height: 30vw;
+  max-height: 150px;
+}
+
+.top-container-main{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-image: url(/assets/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  padding: 50px 0px;
+}
+
+
