--- a/src/characters/components/cardCharacter.css
+++ b/src/characters/components/cardCharacter.css
@@ -54,4 +54,5 @@
     background-color: var(--seconday);
     color: var(--white);
     animation-play-state: running;
+    transform:  scale(1.1);
 }
