--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
     --white:white;
     --black:black;
     background-color: var(--primary);
+    padding: 0px;
+    margin: 0px;
+  }
+  body{
+    padding: 0px;
+    margin: 0px;
   }
 
   .title {
