--- a/src/characters/components/charaterList.css
+++ b/src/characters/components/charaterList.css
@@ -1,7 +1,15 @@
 .list-container{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 35px;
+}
+.characters-list{
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding:0px 13vw 13vw
+    padding:0px 13vw 4vw
 }
+
