--- a/src/characters/components/charaterList.css
+++ b/src/characters/components/charaterList.css
@@ -12,4 +12,24 @@
     flex-wrap: wrap;
     padding:0px 13vw 4vw
 }
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+max-width: 500px;
+min-width: 80%;
+padding: 25px;
+}
 
+
+.input-search{
+  width: 500px;
+  padding: 15px;
+  border: none;
+  margin-right: 15px;
+  border-radius: 50px;
+
+}
+.no-results {
+    color: var(--seconday);
+}
